--- a/index.html
+++ b/index.html
@@ -1,1 +1,135 @@
-你真卡爱dsf vcdxvfdf fsdf Nihai 
+
+  
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>个人简历</title>
+</head>
+
+<body bgcolor="white">
+    <h2 align="center"><a href="/Web/简历.jpeg">个人简历</a></h2>
+    <table border="1" align="center" cellpadding="10" width="900" style="border-color:white;">
+        <tr align="center">
+            <th width="10%" colspan="2" rowspan="5" bgcolor="yellow">基本信息</th>
+        </tr>
+
+        <tr align="center">
+            <th bgcolor="yellow">姓名:</th>
+            <td>何凡</td>
+            <th bgcolor="yellow">年龄:</th>
+            <td>20</td>
+            <th bgcolor="yellow">民族:</th>
+            <td>汉</td>
+            <td rowspan="3" width="100" <p><a href="/web/照片.jpg"><img border="0" src="h.jpg" height="200" width="200" />
+                </a></p>
+            </td>
+        </tr>
+
+        <tr align="center">
+            <th bgcolor="yellow">出生日期:</th>
+            <td>2000.03.31</td>
+            <th bgcolor="yellow">政治面貌:</th>
+            <td>共青团团员</td>
+            <th bgcolor="yellow">学历:</th>
+            <td>大学生</td>
+        </tr>
+
+        <tr align="center">
+            <th bgcolor="yellow">专业:</th>
+            <td>云计算与应用</td>
+            <th bgcolor="yellow">毕业学校:</th>
+            <td>重庆工程职业技术学院</td>
+            <th bgcolor="yellow">邮编:</th>
+            <td>400000</td>
+        </tr>
+
+        <tr align="center">
+            <th bgcolor="yellow">籍贯:</th>
+            <td>重庆</td>
+            <th bgcolor="yellow">电话:</th>
+            <td><a href="tel:18725975539">11111111111</a></td>
+            <th bgcolor="yellow">邮箱:</th>
+            <td colspan="2"><a href="mailto:2595917194@qq.com">2595917194@qq.com </a>
+            </td>
+        </tr>
+    </table>
+
+ 
+
+    <table border="1" align="center" cellpadding="7" width="900" style="border-color:white;">
+        <tr align="center">
+            <th width="10%" colspan="2" rowspan="7" bgcolor="yellow">专业<br>技能</th>
+        </tr>
+        <tr align="left">
+            <td>计算机语言：C语言(掌握指针基本知识),Python(熟悉使用爬虫爬取网页),JAVA(掌握基础知识)</td>
+        </tr>
+        <tr align="left">
+            <td>数据库相关：SQLServer(能熟练增删改查)，MongoDB</td>
+        </tr>
+        <tr align="left">
+            <td>操作系统：Linux（熟悉Linux基础命令，熟练搭建NFS等各种服务），Windows server 2012（熟练搭建 NFS，iSCSI，DHCP，DNS等各种服务），openfiler文件操作系统
+            </td>
+        </tr>
+        <tr align="left">
+            <td>Adobe：能使用After Effects进行简单的视频剪辑，能使用Photoshop进行简单的图像处理</td>
+        </tr>
+        <tr align="left">
+            <td>熟练运用MS Office办公套件（Word,Excel,PPT) </td>
+        </tr>
+        <tr align="left">
+            <td>能使用Vmware套件搭建桌面云</td>
+        </tr>
+    </table>
+
+    <table border="1" align="center" cellpadding="7" width="900" style="border-color: white;">
+        <tr align="center">
+            <th width="10%" colspan="2" rowspan="5" bgcolor="yellow">在校项目经历</th>
+        </tr>
+        <tr align="left">
+            <td>Python实训：使用Python爬取豆瓣图书TOP250数据，爬取酷狗音乐TOP500数据</td>
+        </tr>
+        <tr align="left">
+            <td>数据通信实训：使用Cisco Packet Tracer，运用交换机路由器相关知识模拟搭建企业内外网</td>
+        </tr>
+        <tr align="left">
+            <td>数据库实训：使用SQLServer 2014设计图书管理数据库系统</td>
+        </tr>
+        <tr align="left">
+            <td>虚拟化实训：使用VMware搭建桌面虚拟化</td>
+        </tr>
+    </table>
+
+    <table border="1" align="center" cellpadding="10" width="900" style="border-color: white;">
+        <tr align="center">
+            <th width="10%" colspan="2" rowspan="2" bgcolor="yellow">社团和组织经历</th>
+            <th>社团/组织</th>
+            <th>年月</th>
+            <th>工作职责</th>
+        </tr>
+        <tr align="center">
+            <td>校团委宣传部</td>
+            <td>2019.3-2019.11</td>
+            <td>学习撰写学校新闻稿,微信公众号以及H5动画</td>
+        </tr>
+    </table>
+
+    <table border="1" align="center" cellpadding="10" width="900" style="border-color: white;">
+        <tr align="center">
+            <th width="10%" colspan="2" rowspan="2" bgcolor="yellow">技能证书及其他</th>
+            <th>证书/执照</th>
+            <th>其他</th>
+        </tr>
+        <tr align="center">
+            <td>计算机操作员</td>
+            <td>无</td>
+        </tr>
+    </table>
+
+
+
+</body>
+
+</html>
+
