--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <td>20</td>
             <th bgcolor="yellow">民族:</th>
             <td>汉</td>
-            <td rowspan="3" width="100" <p><a href="/web/照片.jpg"><img border="0" src="h.jpg" height="200" width="200" />
+            <td rowspan="3" width="100" <p><a href="/web/照片.jpg"><img border="0" src="/h.jpg" height="200" width="200" />
                 </a></p>
             </td>
         </tr>
